New Signal Slot Mechanics
Twig will not have one file for declaring and emiting all of its
signals. The class is singleton, hence all of the classes will have the
same instance and will use that instance to connect to the signals.

Note: Signals under directory and file have not been ported for now.
They will be done later.

--- a/ui/resources/component_resources.qrc
+++ b/ui/resources/component_resources.qrc
@@ -3,5 +3,6 @@
     <file>images/directory_close_transparent.png</file>
     <file>images/directory_open_transparent.png</file>
     <file>images/general_file_transparent.png</file>
+    <file>images/add_filesystem_transparent.png</file>
   </qresource>
 </RCC>
