Basic Login With Google implemented.
Left:
- Token Refresh for google
- Not you? button for fb/google
- Multiple sessions with fb and google
- last user for fb
- Revoke Permissions for google (equivalent to signout)

--- a/ui/resources/general_resources.qrc
+++ b/ui/resources/general_resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="general">
     <file>images/logo_transparent.png</file>
+    <file>images/google_signin.png</file>
+    <file>images/facebook_signin.gif</file>
   </qresource>
 </RCC>
